<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/yellow"
    android:padding="@dimen/padding_extra"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:background="@layout/custom_button"
        android:padding="@dimen/padding_extra">

        <com.coicapps.mibus.utils.customwidgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_recorrido"
            android:textSize="@dimen/text_medium"
            android:id="@+id/textView"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/busDatosRuta" />

        <com.coicapps.mibus.utils.customwidgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/clase"
            android:id="@+id/textView3"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/busDatosClase" />


        <com.coicapps.mibus.utils.customwidgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/hora_salida"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:id="@+id/busDatosSalida" />

        <com.coicapps.mibus.utils.customwidgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/hora_llegada"
            android:id="@+id/textView7"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:id="@+id/busDatosLlegada" />

        <com.coicapps.mibus.utils.customwidgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="Destino"
            android:id="@+id/textView10" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/busDatosDestino" />

        <com.coicapps.mibus.utils.customwidgets.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:text="@string/codigo"
            android:id="@+id/textView9" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/busDatosCodigo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_extra"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <com.coicapps.mibus.utils.customwidgets.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Paradas"
                    android:textSize="@dimen/text_medium"/>

                <com.coicapps.mibus.utils.customwidgets.CustomButton
                    android:id="@+id/busDatosAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@layout/custom_button"
                    android:layout_alignParentRight="true"
                    android:text="Apuntar"/>

            </RelativeLayout>

            <com.coicapps.mibus.utils.customwidgets.CustomTextView
                android:id="@+id/busDatosParadas"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


    <com.coicapps.mibus.utils.customwidgets.CustomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_ruta"
        android:textSize="@dimen/text_medium"
        android:padding="@dimen/padding"
        android:background="@layout/custom_button"
        android:id="@+id/busDatosCrear"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_extra" />

    </LinearLayout>
    </ScrollView>

</LinearLayout>